<resources>
    <string name="app_name">AppMantenimientoAlumnos</string>
    <string name="app_title">Mantenimiento de Alumnos</string>

    <string name="main_headline">Gestión de Alumnos</string>
    <string name="main_subheadline">Registra y administra la información de tus alumnos</string>

    <string name="toolbar_nuevo_registro">Nuevo Registro</string>
    <string name="section_datos_personales">Datos personales</string>
    <string name="section_contacto">Contacto</string>
    <string name="section_datos_academicos">Datos académicos</string>

    <string name="btn_crear_bd">Crear base de datos SQLite</string>
    <string name="btn_nuevo_registro">Nuevo registro</string>

    <string name="menu_ajustes">Ajustes</string>
    <string name="menu_acerca_de">Acerca de</string>
    <string name="mensaje_en_construccion">Se sigue trabajando en esto. ¡Gracias!</string>
    <string name="btn_entendido">Entendido</string>

    <string name="hint_nombre">Nombre</string>
    <string name="hint_apellido">Apellido</string>
    <string name="hint_telefono">Teléfono</string>
    <string name="hint_correo_electronico">Correo electrónico</string>
    <string name="hint_direccion">Dirección</string>
    <string name="hint_fecha_nacimiento">Fecha de nacimiento</string>
    <string name="helper_fecha_formato">DD-MM-AAAA</string>
    <string name="hint_dni">DNI</string>
    <string name="hint_carrera">Carrera</string>
    <string name="hint_ciclo">Ciclo</string>
    <string name="hint_estado">Estado</string>
    <string name="btn_guardar">Guardar registro</string>
</resources>
